erDiagram
    ADMIN ||--o{ CUSTOMER : "Manages"
    ADMIN ||--o{ GAME : "Approves"
    ADMIN ||--o{ REVIEW : "Manages"
    ADMIN ||--o{ CART : "Monitors"
    
    CUSTOMER ||--o{ REVIEW : "Creates"
    CUSTOMER ||--o{ LIBRARY : "Owns"
    CUSTOMER ||--o{ WISHLIST : "Owns"
    CUSTOMER ||--o{ CART : "Owns"
    
    GAME ||--o{ REVIEW : "Receives"
    GAME }|--|| PUBLISHER : "Publish"
    GAME }o--|| CATEGORY : "in"
    
    LIBRARY }|--o{ GAME : "Contain"
    WISHLIST }|--o{ GAME : "Contain"
    CART }|--o{ GAME : "Contain"
    
    ADMIN {
        int AdminId PK "Primary Key"
        string Username UK "Unique"
        string Password
        date Start_date
    }
    
    CUSTOMER {
        int UserId PK "Primary Key"
        string Username UK "Unique"
        string Password
        string FirstName "Fname"
        string LastName "Lname"
        string Name
        date DateOfBirth "Dob"
        string Email
        string Avatar
        decimal Balance
    }
    
    GAME {
        int GameId PK "Primary Key"
        string Name
        string Description
        string Version
        decimal Cost
        int DownloadNum "Derived attribute"
    }
    
    PUBLISHER {
        int PublisherId PK "Primary Key"
        string Name
        string Location
        string TaxCode
        string Description
    }
    
    CATEGORY {
        int CategoryId PK "Primary Key"
        string Name
        string Description
    }
    
    LIBRARY {
        int LibraryId PK "Primary Key"
        int CustomerId FK "Foreign Key"
        string Name "Derived"
        int DownloadNum "Derived attribute"
    }
    
    WISHLIST {
        int WishlistId PK "Primary Key"
        int CustomerId FK "Foreign Key"
        string Name "Derived"
        int GameNumber "Derived attribute"
    }
    
    CART {
        int CartId PK "Primary Key"
        int CustomerId FK "Foreign Key"
        string Status "Derived"
        string PaymentMethod
        decimal Amount "Derived attribute"
    }
    
    REVIEW {
        int ReviewId PK "Primary Key"
        int CustomerId FK "Foreign Key"
        int GameId FK "Foreign Key"
        datetime Time "Derived"
        string Comment
        int Rating
    }